updated app.js function, attempting TDD

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <section class="main-section">
             <img>
             <h2>
-                Take a guess
+                Guessing Game
             </h2>
             <div>
                 <ol>
                     <li>Try to guess a number between 1 & 20</li>
-                    <li>You only have 4</li>
-                    <li></li>
+                    <li>You only have 4 chances to get it right</li>
+                    <li>Your hints will appear as you take guesses</li>
                     <li></li>
                 </ol>
             </div>
@@ -36,11 +36,11 @@
                 <input id='guess-input' type="text">
             </div>
             <div id='guess-feedback'>
-                You guessed right!
+                Take a guess!
             </div>
             <div>
                 <button id='guess-button' type="button">
-                    Take a guess
+                    Click Me
                 </button>
             </div>
         </section>
