--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <main>
         <section class="main-section">
             <img>
-            <h2>
+            <h2 class='text-content'>
                 Guessing Game
             </h2>
             <div>
-                <ol>
+                <ol class='text-content'>
                     <li>Try to guess a number between 1 & 20</li>
                     <li>You only have 4 chances to get it right</li>
                     <li>Your hints will appear as you take guesses</li>
@@ -35,12 +35,17 @@
             <div>
                 <input id='guess-input' type="text">
             </div>
-            <div id='guess-feedback'>
+            <div id='guess-feedback' class = 'text-content'>
                 Take a guess!
             </div>
             <div>
                 <button id='guess-button' type="button">
-                    Click Me
+                    Click Me!
+                </button>
+            </div>
+            <div>
+                <button id='reset-button' type='button' onclick="window.location.reload()">
+                    Reset
                 </button>
             </div>
         </section>
